<resources>
    <string name="app_name">MIHU</string>
    <string name="signup">Sign Up</string>
    <string name="login">Log In</string>
    <string name="message_welcome_page">Feeling down? Want to share but have no one to talk to? Dont worry, share your stories on Cerita Guwe!</string>
    <string name="title_welcome_page">Welcome to CeritaGuwe!</string>
    <string name="title_signup_page">Please complete your details below</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="message_login_page">Enter your email and password!</string>
    <string name="title_login_page">Ready to tell your story?</string>
    <string name="name">Name</string>
    <string name="message_main_page">Happy Learning on Dicoding.</string>
    <string name="greeting">Hello %1$s,</string>
    <string name="logout">Logout</string>
    <string name="story_name">Name</string>
    <string name="description">Description</string>
    <string name="upload">Upload</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="setting">Settings</string>
    <string name="image_warning">Warning</string>
    <string name="err_msg_required">%1$s is required</string>
    <string name="success">Success: %1$s</string>
    <string name="your_account_has_been_created">Your account has been created</string>
    <string name="please_login_to_your_account">Please log in to your account</string>
    <string name="permission_request_granted">Permission Granted</string>
    <string name="permission_request_denied">Permission Denied</string>
    <string name="image_is_required_to_make_a_story">Image Required</string>
    <string name="no_media_selected">No Media Selected</string>
    <string name="err_msg_email">Invalid Email</string>
    <string name="maps">Maps</string>
    <string name="title_activity_maps">MapCeritaGuwe</string>
    <string name="gettingData">Getting Data</string>
    <string name="successLoc">Succes Getting Data</string>
    <string name="close">Close</string>
    <string name="retry">Retry</string>
    <string name="include_currect_location">Include Current Location</string>
    <string name="previewimage">PreviewImage</string>
    <string name="error">Error: %1$s</string>
    <string name="messege_register">Sign up to use MIHU!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_bottom_navigatian">BottomNavigatian</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="searchbar_hint">I Need Help . . .</string>
    <string name="app_name_panjang">May I Help U?</string>
    <string name="app_service">Our Service</string>
    <string name="Services">Services</string>
    <string name="title_order">Order</string>
    <string name="title_profile">Profile</string>
    <string name="gardening">Gardening</string>
    <string name="image_job">image_job</string>
    <string name="address">Address</string>
    <string name="message">Message</string>
    <string name="date">Date</string>
    <string name="account_setting">Account Setting</string>
    <string name="personal_info">Personal Info</string>
    <string name="log_out">Log Out</string>
    <string name="order_history">Order History</string>
    <string name="title_activity_navigation_drawer">NavigationDrawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="become_worker">Become A Worker?</string>
    <string name="worker">Choose Worker</string>
    <string name="salary">Rp. 100.000</string>
    <string name="task">Task</string>
    <string name="cd_onboarding_1">img_onboarding</string>
    <string name="cd_indicator_1_active">cd_indicator_1_active</string>
    <string name="cd_indicator_2_disable">cd_indicator_2_disable</string>
    <string name="cd_indicator_3_disable">cd_indicator_3_disable</string>
    <string name="cd_indicator_4_disable">cd_indicator_4_disable</string>
    <string name="onboarding_titles_1">Welcome To Mihu</string>
    <string name="onboarding_desc_1">We re thrilled to have you join our community of helpful individuals and seekers of assistance. MIHU is your go-to platform for connecting with skilled people who can lend a hand with various tasks.</string>
    <string name="skip">Skip</string>
    <string name="next">Next</string>
    <string name="cd_indicator_1_disable">cd_indicator_1_disable</string>
    <string name="onboarding_desc_4">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="start">Start</string>
    <string name="cd_onboarding_2">cd_onboarding_2</string>
    <string name="cd_indicator_2_active">cd_indicator_2_active</string>
    <string name="onboarding_titles_2">Search for Service</string>
    <string name="onboarding_desc_2">Use our intuitive search feature to find people with the skills youre looking for. Filter results based on location, availability, and user reviews to connect with the right person for the job.  </string>
    <string name="cd_onboarding_3">cd_onboarding_3</string>
    <string name="cd_indicator_3_active">cd_indicator_3_active</string>
    <string name="onboarding_titles_3">You are Ready!</string>
    <string name="onboarding_desc_3">Once you find a potential match, initiate a chat to discuss the details of the task. Clear communication is key to a successful collaboration..</string>
    <string name="register">Register</string>
    <string name="task_history">History</string>
    <string name="ic_logo">ic_logo</string>
    <string name="donthvanacc">"Dont Have An Account? "</string>
    <string name="registerworker">Register as Worker</string>
    <string name="loginworker">Log In as Worker</string>
    <string name="signupworker">Sign Up as Worker</string>
    <string name="userlogin">Not A Worker?</string>
    <string name="loginuser1">Log In As User</string>
    <string name="notauser">Not A User?</string>
    <string name="LoginAsWorker">Login As Worker</string>
    <string name="history">History</string>
    <string name="tab_text_1">Scheduled</string>
    <string name="tab_text_2">Completed</string>
    <string name="your_order_submitted">Your order has been submitted</string>
    <string name="please_wait_for">" Please wait for worker take a job"</string>
    <string name="price">Price</string>
    <string name="tab_completed">Completed</string>
    <string name="tab_ongoing">Ongoing</string>
    <string name="avatar">Avatar</string>
    <string name="status">Status</string>
    <string name="price_format">Rp. %d</string>
    <string name="take_request">Take Request</string>
    <string name="job_take">Request Taken Successfully!</string>
    <string name="please_job">Please do it seriously</string>
    <string name="checkbutton">checkButton</string>
    <string name="thanks">"Thank You! "</string>
    <string name="have_a_nice_day">Have A Nice Day With MIHU!</string>
    <string name="string_iv_photo">string/iv_photo</string>
    <string name="avatarz">Avatar</string>
</resources>